# PiDay

./: Cargo.toml  README.md  diff.txt  pi.txt  time_run.sh
src/: calc.rs  main.rs
