[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.19.1"
# crypto-bigint = "0.5.1"
# num-bigint = "0.4"
# num-bigfloat = "1.6.2"
# num-traits = "0.2.15"
# clap = "4.1.8"
# difference = { git = "https://github.com/johannhof/difference.rs" }